# HiProd

./: .env.example  .gitignore  .replit  CONFIGURACAO_HTTPS.md  CONFIGURACAO_SSO.md  CORRECAO_CARREGAMENTO_ATIVIDADES.md  CORRIGIR_REACT_WEBSOCKET.md  Dockerfile  LIMPAR_CACHE_VITE.md  POSTMAN_API_ATIVIDADES.md  README.md  TROUBLESHOOTING_405.md  app.py  docker-check-env.bat  docker-check-env.sh  docker-compose.yml  docker-entrypoint.sh  force-reload.html  importtime.py  index.html  init.sql  nginx-hiprod.conf  package-lock.json  package.json  replit.md  requirements.txt  setup_database.py  test-connection.html  test_atividades.py  test_connection.py  test_screenshots.py  update_db_schema.py  vite.config.js
agent/: .gitignore  BUILD.md  COMPILACAO_ARQUIVO_UNICO.md  CORRECAO_URL_API.md  DIAGNOSTICO_USUARIO_MONITORADO.md  ESTRUTURA_COMPILACAO.md  INTEGRACAO.md  SECURITY_AUDIT.md  SERVICE.md  TESTE_API.md  VERIFICAR_BUILD_FACIAL.md  agent.py  agent_service.py  aumentar_timeout_servico.bat  build.bat  build.py  check_6363.py  check_6363_detailed.py  check_recent.py  check_screenshots.py  config.example  extract_floating.py  face_detection.py  find_6363.py  floating_button.py  iniciar_com_windows_desinstalar.bat  iniciar_com_windows_instalar.bat  install_service.bat  keylogger.py  learned_applications.json  lock_screen.py  main.py  offline_queue.jsonl  remove_floating_from_lock.py  setup.py  (+12 more)
agent/c/: CMakeLists.txt  Makefile  README.md  api.c  api.h  build.bat  config.c  config.h  http.c  http.h  main.c  screen_capture.c  screen_capture.h  windows_utils.c  windows_utils.h
(+110 files in other folders)
